- correct spacing - update styling

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -76,6 +76,7 @@
   .card__content-caption {
     font-size: 16px;
     line-height: 16px;
+    max-width: 268px;
   }
 
   .card__content-like {
